# PlatformQ

./: .coverage  .gitignore  .semgrepignore  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  nx.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  mlops-pipeline.yml
docs/: ADR.md  API_DOCUMENTATION.md  CLOUDSTACK_INTEGRATION.md  COMPLIANCE_VC_INTEGRATION.md  advanced-capabilities-integration.md  advanced-capabilities-summary.md  dao_user_guide.md  index.md  knative.md  local_setup.md  nextcloud_oidc_setup.md  openkm_oidc_setup.md  openproject_oidc_setup.md  third_party_integrations.md  third_party_integrations_plan.md  zulip_oidc_setup.md
docs/architecture/: asset_lifecycle.md  compute_futures_settlement.md  data_lake_optimization.md  federated_graph_intelligence.md  mlops_model_as_service.md  multi_physics_collaboration.md  resilience_loops.md  resource_orchestration.md  trust_search_federation.md  unified_data_mesh.md  workflow_federation.md
docs/observability/: UNIFIED_OBSERVABILITY_GUIDE.md
docs/research/: platformq_enhancements.md
examples/: compute_futures_settlement_demo.py
examples/asset-linker-wasm/: Cargo.toml
examples/asset-linker-wasm/src/: main.rs
examples/credential-verifier-wasm/: Cargo.toml
examples/credential-verifier-wasm/src/: lib.rs
examples/log-analyzer-wasm/: Cargo.toml
examples/mesh-decimator-wasm/: Cargo.toml
examples/trust-scorer-wasm/: Cargo.toml
examples/wasm-rust-hello/: Cargo.toml
examples/wasm-rust-hello/src/: main.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
iac/kubernetes/: README.md  kong.yaml  superset_config.py
iac/terraform/: README.md  main.tf  variables.tf
ideas/: README.md
ideas/QX/: README.md
infra/cloudstack/: docker-compose.yml
infra/docker-compose/: README-ANALYTICS.md  airflow.env  docker-compose.airflow.yml  docker-compose.analytics.yml  docker-compose.blockchain.yml  docker-compose.derivatives.yml  docker-compose.spark.yml  docker-compose.yml  setup_airflow.sh  (+1 more)
libs/platformq-shared/: README.md  pyproject.toml  requirements.in  setup.py
libs/platformq-shared/src/platformq/shared/: __init__.py  base_service.py  compute_orchestrator.py  config.py  error_handling.py  event_framework.py  event_publisher.py  events.py  iceberg_client.py  multi_physics_orchestrator.py  nextcloud_client.py  postgres_db.py  repository.py  resilience.py  scaling_utils.py  service_client.py  webhooks.py
libs/platformq-shared/src/platformq/shared/crdts/: geometry_crdt.py
libs/platformq-shared/src/platformq/shared/observability/: __init__.py  instrumentation.py  unified_observability.py
libs/platformq-shared/src/platformq_shared/: __init__.py  base_service.py  config.py  config_manager.py  federated_knowledge_graph.py
libs/platformq-unified-data/: README.md  pyproject.toml  setup.py
libs/platformq-unified-data/src/platformq_unified_data/: __init__.py  cache.py  exceptions.py  manager.py  models.py  query.py  repository.py
libs/platformq-unified-data/src/platformq_unified_data/adapters/: __init__.py  base.py  cassandra.py  elasticsearch.py  ignite.py  janusgraph.py  minio.py
load-testing/: README.md  k6-test.js
observability/: marketplace-prometheus-rules.yaml  otel-collector-config.yaml  prometheus-rules.yaml  prometheus.yml
platformqctl/: README.md  project.json  requirements.txt  setup.py
requirements/: base.in  base.txt
schemas/: activity_event.avsc  conversion_requested.avsc  document_updated.avsc  project_created.avsc  simulation_started.avsc  subscription_changed.avsc  user_created.avsc
scripts/: bootstrap_config.py  bootstrap_platform.py  bootstrap_secrets.py  deploy_contracts.py  migrate_services.py  migrate_to_iceberg.py  setup_vault_config.py  test_config_with_ignite.py  validate_model.py
services/: README.md  blockchain-refactoring-guide.md
(+1571 files in other folders)
