[package]
name = "asset-linker-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# serde for data serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# To build this, use:
# cargo build --target wasm32-unknown-unknown --release 