[package]
name = "credential-verifier-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true 